Fix contrast

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -501,3 +501,6 @@ html, body {
     font-size: 20px;
     text-decoration: underline;
 }
+.badge-success {
+    background-color: #288045;
+}
